Corrected overflow.

--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -45,6 +45,7 @@ body.admin-bar .navbar-fixed-top {
   box-shadow: 0 2px 32px rgba(0, 0, 0, 0.50);
   font-size: 11px;
   font-weight: 800;
+  overflow-x: hidden;
   text-transform: uppercase;
   transition: box-shadow .75s;
 
